# aituber

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MILESTONES.md  PLANS.md  QUALITY_SCORE.md  check_animator.py  check_motion.py
AITuber/: .env.example  .gitignore  AITuber.slnx  README.md  measure_mem.py  pyproject.toml  run_tests.ps1
AITuber/.github/: AGENTS.md  AGENT_TASK_TEMPLATE.md  CODE_REVIEW_CHECKLIST.md  PROTOCOL_AVATAR_WEBSOCKET.md  PULL_REQUEST_TEMPLATE.md  SECURITY_AGENT.md  copilot-instructions.md  copilot-review-workflow.md
AITuber/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
AITuber/.github/agents/: harness-review-orchestrator.agent.md  orchestrator-python.agent.md  security-guardian.agent.md  test-specialist.agent.md  unity-avatar-client.agent.md
AITuber/.github/copilot-review-prompts/: architecture-reviewer.md  lead-reviewer.md  performance-reviewer.md  reliability-reviewer.md  requirements-reviewer.md  security-reviewer.md  test-reviewer.md
AITuber/.github/hooks/: guardrails.json
AITuber/.github/instructions/: docs.instructions.md  python.instructions.md  tests.instructions.md  unity-csharp.instructions.md
AITuber/.github/prompts/: implement-feature.prompt.md  implement-from-srs.prompt.md  review-pr.prompt.md  run-harness-review-loop.prompt.md  triage-review-findings.prompt.md  validate-review-fixes.prompt.md
AITuber/.github/scripts/: validate_avatar_schema.py  validate_srs.py
AITuber/.github/srs/: bandit.yml  nfr.yml  requirements.yml  safety.yml  tests.yml
AITuber/.github/workflows/: ci.yml  srs-validate.yml
AITuber/Assets/Animations/: AvatarAnimatorController.controller
AITuber/Assets/Editor/: AlchemistRoomExporter.cs  AnimationGenerator.cs  AnimationRiggingSetup.cs  AnimatorSetup.cs  ApplySketchMaterial.cs  AutoUnpause.cs  AvatarControllerSetup.cs  AvatarDebugWindow.cs  BK_MaterialUpgrader.cs  BehaviorTestMenu.cs  BlendShapeDumper.cs  BlendShapeInspector.cs  BlendTreeSetup.cs  BuildHelper.cs  SCSSApplier.cs  (+31 more)
AITuber/ProjectSettings/: EditorSettings.asset  ProjectSettings.asset
AITuber/config/: character.yml  obs.yml  tha_emotion_map.yml
AITuber/docs/: SRS.md  animation-technical-stack.md  autonomous-growth.md  avatar-motion-roadmap-sonnet-implementation-prompt.md  avatar-motion-roadmap.md  lipsync.md  m1-design.md  obs_setup.md  tech-debt-tracker.md  testing.md
AITuber/minecraft_bridge/: bot.js  package.json
AITuber/orchestrator/: __init__.py  __main__.py  a2g_worker.py  approve_cli.py  audio2emotion.py  audio_player.py  auto_gesture_test.py  avatar_ws.py  bandit.py  bgm_manager.py  broadcast_desire.py  broadcast_layout.py  broadcast_lifecycle.py  camera_context.py  character.py  chat_poller.py  config.py  dashboard.py  debug_sender.py  dev_agent.py  emotion_gesture_selector.py  episodic_store.py  event_bus.py  game_context_adapter.py  game_loop.py  gap_dashboard.py  gap_trigger.py  gesture_composer.py  goal_memory.py  growth_loop.py  hot_reload.py  integration_test.py  latency.py  life_activity.py  life_scheduler.py  llm_client.py  llm_modulo_validator.py  local_test.py  main.py  memory.py  (+24 more)
AITuber/overlays/: background.html  chat.html  ending.html  game_frame.html  header.html  opening.html  subtitle.html  tha_avatar.html  tha_broadcast.html  transition.html
AITuber/scripts/: chat_test.py  launch.ps1
AITuber/tests/: conftest.py  test_approve_cli.py  test_bandit_and_avatar.py  test_bandit_epsilon_adapt.py  test_bgm_manager.py  test_broadcast_desire.py  test_broadcast_layout.py  test_broadcast_lifecycle.py  test_camera_context.py  test_character.py  test_character_multi.py  test_chat_poller.py  test_dev_agent.py  test_e2e_dryrun.py  test_emotion_gesture_selector.py  test_episodic_store.py  test_event_bus.py  test_game_context_adapter.py  test_game_loop_resilience.py  test_gap_dashboard.py  test_gap_trigger.py  test_gesture_composer.py  test_goal_memory.py  test_growth_loop.py  test_growth_loop_scope.py  test_hot_reload.py  test_intent_priority.py  test_latency.py  test_life_activity.py  test_life_scheduler.py  test_live_chat_id_auto.py  test_llm_client.py  test_llm_modulo_validator.py  test_llm_stream.py  test_m4_policy_growth.py  test_maintenance_decay.py  test_memory.py  test_memory_budget.py  test_memory_maintenance_cli.py  test_memory_quality.py  (+31 more)
AITuber/tools/: cubism_import_psd.py  detect_obs_game_window.py  dev_loop.py  e2e_ws_test.py  get_chat_id.py  launch.py  live2d_b1_config.py  live2d_b1_cutout.py  live2d_b1_extract.py  live2d_imgutil.py  live2d_phase1_pipeline.py  live2d_phase1_status.py  live2d_phase1_sync_status.py  live2d_psd_export.py  setup_obs.py  youtube_auth.py
native/A2GPlugin/: A2GPlugin.cpp  A2GPlugin.h  CMakeLists.txt  README.md
(+461 files in other folders)
